--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "billsettle",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "^3.0.1",
+    "vue": "^2.4.4"
+  },
+  "devDependencies": {
+    "babel-preset-vue-app": "^1.3.1",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
