--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "billsettle",
   "private": true,
+  "scripts": {
+    "lint": "eslint --ext js,jsx app/javascript"
+  },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
     "vue": "^2.4.4"
   },
   "devDependencies": {
     "babel-preset-vue-app": "^1.3.1",
+    "eslint": "^4.8.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^2.1.0",
+    "vue-router": "^2.7.0",
     "webpack-dev-server": "^2.9.1"
   }
 }
