--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
+    "bootstrap": "^3.3.7",
     "vue": "^2.4.4"
   },
   "devDependencies": {
