--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta",
     "vue": "^2.4.4"
   },
   "devDependencies": {
     "babel-preset-vue-app": "^1.3.1",
+    "bootstrap-vue": "^1.0.0-beta.9",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-vue": "^2.0.2",
