--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "bootstrap-vue": "^1.0.0-beta.9",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-config-vue": "^2.0.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint-plugin-vue": "beta",
     "vue-router": "^2.7.0",
     "webpack-dev-server": "^2.9.1"
   }
