--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
+    "axios": "^0.16.2",
     "bootstrap": "^4.0.0-beta",
-    "vue": "^2.4.4"
+    "js-cookie": "^2.1.4",
+    "vue": "^2.4.4",
+    "vuex": "^2.4.1"
   },
   "devDependencies": {
     "babel-preset-vue-app": "^1.3.1",
