--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "billsettle",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext js,jsx app/javascript"
+    "lint": "eslint --ext js,jsx app/javascript spec/javascript",
+    "test": "NODE_ENV=test yarn karma start"
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "babel-preset-vue-app": "^1.3.1",
     "bootstrap-vue": "^1.0.0-beta.9",
+    "chai": "^4.1.2",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -26,6 +28,15 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "beta",
+    "jsdom": "^11.3.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-jsdom-launcher": "^6.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.5",
+    "mocha": "^4.0.1",
     "vue-router": "^2.7.0",
     "webpack-dev-server": "^2.9.1"
   }
