--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "vuex": "^2.4.1"
   },
   "devDependencies": {
+    "avoriaz": "^6.0.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-vue-app": "^1.3.1",
     "bootstrap-vue": "^1.0.0-beta.9",
     "chai": "^4.1.2",
@@ -34,10 +38,14 @@
     "karma-jsdom-launcher": "^6.1.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.4",
+    "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.5",
     "mocha": "^4.0.1",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0",
     "vue-router": "^2.7.0",
+    "vue-template-compiler": "^2.4.4",
     "webpack-dev-server": "^2.9.1"
   }
 }
