--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-vue-app": "^1.3.1",
+    "bdd-lazy-var": "^1.3.0",
     "bootstrap-vue": "^1.0.0-beta.9",
     "chai": "^4.1.2",
     "eslint": "^4.8.0",
