ci: working karma, lint, cleanup old specs
Squashed commit of the following:

commit fa9fac1969850115f54a36e8433431b18814fa9e
Author: Matt Lewis <matt@mplewis.com>
Date:   Sun Oct 15 15:32:18 2017 -0600

    cleanup: no debug, unused specs

commit 8713eecb0c9cc63efc4fb7be94f2abe9805b3c0f
Author: Matt Lewis <matt@mplewis.com>
Date:   Sun Oct 15 15:27:19 2017 -0600

    config: karma output

commit d59f06664baee25dae31f5b27f8dbf1ba946f972
Author: Matt Lewis <matt@mplewis.com>
Date:   Sun Oct 15 15:25:04 2017 -0600

    config: more karma

commit 70400e539042ba2e3992278307642ccb1ceaf39a
Author: Matt Lewis <matt@mplewis.com>
Date:   Sun Oct 15 15:19:30 2017 -0600

    config: log level karma

commit a83c062e50b213f82816045bcb205a448647f550
Author: Matt Lewis <matt@mplewis.com>
Date:   Sun Oct 15 15:14:19 2017 -0600

    circle: yarn test junit, single run

commit 0d084fc8dea2503dcae6a487866b9998587a12f6
Author: Matt Lewis <matt@mplewis.com>
Date:   Sun Oct 15 15:04:01 2017 -0600

    config: yarn lint/test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,14 +22,17 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "Gemfile.lock" }}
+          - v1-dependencies-{{ checksum "Gemfile.lock" }}-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
       - run:
-          name: install dependencies
-          command: |
-            bundle install --jobs=4 --retry=3 --path vendor/bundle
+          name: bundle install
+          command: bundle install --jobs=4 --retry=3 --path vendor/bundle
+
+      - run:
+          name: yarn install
+          command: yarn install
 
       - save_cache:
           paths:
@@ -42,12 +45,20 @@ jobs:
 
       # run tests!
       - run:
-          name: run tests
+          name: RSpec
           command: |
             mkdir /tmp/test-results
             rspec --format progress \
                   --format RspecJunitFormatter \
                   --out /tmp/test-results/rspec.xml
+
+      - run:
+          name: Karma
+          command: yarn test --single-run
+
+      - run:
+          name: ESLint
+          command: yarn lint
 
       # collect reports
       - store_test_results:
