--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsdom": "^11.3.0",
     "karma": "^1.7.1",
     "karma-jsdom-launcher": "^6.1.2",
+    "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.4",
     "karma-sinon-chai": "^1.3.2",
