feature: working GraphQL specs
Squashed commit of the following:

commit 42ef7cbf0192d4944659f2995fcb9ca10f534ca1
Author: Matt Lewis <matt@mplewis.com>
Date:   Tue Oct 17 01:12:31 2017 -0600

    cleanup: status pending

commit b732fac5997871ac62fc3b86439a0d9afc37a4fb
Author: Matt Lewis <matt@mplewis.com>
Date:   Tue Oct 17 01:08:43 2017 -0600

    cleanup: no creator email for incompletes

commit 6d575f0bc87e11b2771cf26fa133b56e34f33be4
Author: Matt Lewis <matt@mplewis.com>
Date:   Tue Oct 17 01:07:39 2017 -0600

    cleanup: consistent id type

commit 7ce8c0ccd91d5f605e70deb97decf5bff9b9508a
Author: Matt Lewis <matt@mplewis.com>
Date:   Tue Oct 17 01:05:51 2017 -0600

    working specs

commit 2ca72c9b35cd23f6840fab6370079b77be69df85
Author: Matt Lewis <matt@mplewis.com>
Date:   Tue Oct 17 00:12:56 2017 -0600

    spec: working load from graphql mock

commit 4dbe28a29e8e9750b6d5603b2c86efeceeee7cd1
Author: Matt Lewis <matt@mplewis.com>
Date:   Mon Oct 16 23:38:26 2017 -0600

    progress

commit ed788ec179dd8a266d1e312de4f53c4e194aa77c
Author: Matt Lewis <matt@mplewis.com>
Date:   Mon Oct 16 21:55:42 2017 -0600

    config: karma global schema

commit 4fc36a538eaddd577f7042eed4320c2b0b90cbf9
Author: Matt Lewis <matt@mplewis.com>
Date:   Mon Oct 16 21:55:31 2017 -0600

    rake: graphql:schema dump

commit 4d3542d8a1ef3ebdaa8addc32bdd8c521b329913
Author: Matt Lewis <matt@mplewis.com>
Date:   Mon Oct 16 21:54:29 2017 -0600

    eslint: ecma v8

commit 3e71d94dcbcbf3f286cd1be494518984e6788e8c
Author: Matt Lewis <matt@mplewis.com>
Date:   Mon Oct 16 21:54:20 2017 -0600

    deps: shelljs, heredoc

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vuex": "^2.4.1"
   },
   "devDependencies": {
+    "apollo-test-utils": "^0.3.2",
     "avoriaz": "^6.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -33,6 +34,8 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "beta",
+    "faker": "^4.1.0",
+    "heredocument": "^2.0.2",
     "jsdom": "^11.3.0",
     "karma": "^1.7.1",
     "karma-jsdom-launcher": "^6.1.2",
@@ -43,6 +46,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.5",
     "mocha": "^4.0.1",
+    "shelljs": "^0.7.8",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
     "vue-router": "^2.7.0",
