--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "shelljs": "^0.7.8",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
+    "vue-hot-reload-api": "^2.2.0",
+    "vue-jsx-hot-loader": "^1.1.6",
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.4.4",
     "webpack-dev-server": "^2.9.1"
