--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "eslint-plugin-vue": "beta",
     "faker": "^4.1.0",
     "hard-source-webpack-plugin": "^0.4.9",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jsdom": "^11.3.0",
     "karma": "^1.7.1",
+    "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jsdom-launcher": "^6.1.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
